--- a/drools-7.x-root/kie-server-api/pom.xml
+++ b/drools-7.x-root/kie-server-api/pom.xml
@@ -65,6 +65,13 @@
             <version>${kie.api.version}</version>
         </dependency>
 
+        <!-- Dependency for loading KJARs from a Maven repository using KieScanner. -->
+        <dependency>
+            <groupId>org.kie</groupId>
+            <artifactId>kie-ci</artifactId>
+            <version>${kie.api.version}</version>
+        </dependency>
+
 
     </dependencies>
 
