--- a/drools-7.x-root/kie-project-starter/pom.xml
+++ b/drools-7.x-root/kie-project-starter/pom.xml
@@ -66,6 +66,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>27.0.1-jre</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
