--- a/drools-7.x-root/kie-project-starter/pom.xml
+++ b/drools-7.x-root/kie-project-starter/pom.xml
@@ -13,7 +13,7 @@
 
     <artifactId>kie-project-starter</artifactId>
     <groupId>org.jackzeng</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1-SNAPSHOT</version>
 
     <properties>
         <project.build.source>8</project.build.source>
@@ -22,12 +22,7 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>com.thoughtworks.xstream</groupId>
-            <artifactId>xstream</artifactId>
-            <version>1.4.10</version>
-            <scope>test</scope>
-        </dependency>
+
         <dependency>
             <groupId>org.kie</groupId>
             <artifactId>kie-internal</artifactId>
@@ -40,12 +35,7 @@
             <version>7.12.0.Final</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
+
         <dependency>
             <groupId>org.optaplanner</groupId>
             <artifactId>optaplanner-persistence-jaxb</artifactId>
@@ -55,6 +45,12 @@
         <dependency>
             <groupId>org.kie</groupId>
             <artifactId>kie-api</artifactId>
+            <version>7.12.0.Final</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.kie</groupId>
+            <artifactId>kie-ci</artifactId>
             <version>7.12.0.Final</version>
             <scope>provided</scope>
         </dependency>
@@ -73,6 +69,20 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.4.10</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -85,6 +95,19 @@
             </plugin>
         </plugins>
     </build>
+
+
+    <distributionManagement>
+
+
+        <repository>
+            <id>kie-workbench</id>
+            <name>JBoss BRMS Guvnor M2 Repository</name>
+            <url>http://localhost:8123/kie-wb/maven2</url>
+            <layout>default</layout>
+        </repository>
+
+    </distributionManagement>
 
 
 </project>
