add test script

--- a/drools-7.x-root/kie-project-starter/pom.xml
+++ b/drools-7.x-root/kie-project-starter/pom.xml
@@ -99,7 +99,7 @@
 
     <distributionManagement>
 
-
+        <!--`mvn deploy` to publish kjar to workbench maven-->
         <repository>
             <id>kie-workbench</id>
             <name>JBoss BRMS Guvnor M2 Repository</name>
