--- a/drools-7.x-root/kie-project-starter/pom.xml
+++ b/drools-7.x-root/kie-project-starter/pom.xml
@@ -13,11 +13,11 @@
 
     <artifactId>kie-project-starter</artifactId>
     <groupId>org.jackzeng</groupId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.3-SNAPSHOT</version>
 
     <properties>
-        <project.build.source>8</project.build.source>
-        <project.build.target>8</project.build.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -103,7 +103,7 @@
         <repository>
             <id>kie-workbench</id>
             <name>JBoss BRMS Guvnor M2 Repository</name>
-            <url>http://localhost:8123/kie-wb/maven2</url>
+            <url>http://10.241.0.41:8123/kie-wb/maven2</url>
             <layout>default</layout>
         </repository>
 
