--- a/drools-7.x-root/docker/kie-wb/wb-release/application-roles.properties
+++ b/drools-7.x-root/docker/kie-wb/wb-release/application-roles.properties
@@ -1,2 +1,2 @@
-kieadmin=admin,analyst,developer,manager,user,kiemgmt
+kieadmin=admin,analyst,developer,manager,user,kiemgmt,kie-server
 kieserver=admin,kie-server
